<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <Button
            android:id="@+id/change_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/change" />

        <TextView
            android:id="@+id/log_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="#5F000000"
            android:text="@string/log" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/change_btn"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@+id/change_btn"
            android:text="@string/reset" />

        <Button
            android:id="@+id/view3d_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/reset_btn"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@+id/reset_btn"
            android:text="@string/view3d" />

        <hosei.negishi.pdrtam.view.CustomCameraView
            android:id="@+id/customizableCameraView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/log_text"
            android:layout_alignStart="@+id/atamView"
            android:layout_toEndOf="@+id/view3d_btn"
            android:visibility="visible"
            opencv:camera_id="any"
            opencv:show_fps="true" />

        <Button
            android:id="@+id/takePic_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view3d_btn"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@+id/reset_btn"
            android:text="@string/take_pic"
            android:visibility="invisible" />

</RelativeLayout>
